added text files and did logic for 2023 Q9StuffingRecipes